--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
         <footer>
             <div class="footer-content">
-                <p>&copy; 2023 Abhit Anant Bangar. All Rights Reserved.</p>
+                <p>&copy; 2023 theabhitbangar. All Rights Reserved.</p>
                 <div class="social-links">
                     <a href="mailto:abhitbangar333@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="tel:+918830088515"><i class="fas fa-phone"></i></a>
