--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a href="mailto:abhitbangar333@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
                     <a href="tel:+918830088515" title="Phone"><i class="fas fa-phone"></i></a>
                     <a href="https://github.com/AbhitBangar" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-                    <a href="https://linkedin.com/in/AbhitBangar" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/theabhitbangar" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
         </section>
@@ -64,11 +64,11 @@
                             <li>
                                 <span class="year">2021 - 2025</span>
                                 <span class="degree">ARMIET, University of Mumbai</span>
-                                <span class="detail">Computer Engineering | CGPA: 7.5</span>
+                                <span class="detail">Computer Engineering | CGPA: 7.6</span>
                             </li>
                             <li>
                                 <span class="year">2020 - 2021</span>
-                                <span class="degree">SV & J College, Kinhavali, Thane</span>
+                                <span class="degree">SCSV & Junior College, Kinhavali, Thane</span>
                                 <span class="detail">Class XII, 85.83%</span>
                             </li>
                             <li>
@@ -195,6 +195,7 @@
                     <h3>Certificates</h3>
                     <ul>
                         <li><strong>Java Full Stack</strong> - Qspiders, 2025</li>
+                        <li><strong>Full Stack Web Development</strong> - Apna College, 2024</li>
                     </ul>
                 </div>
             </div>
@@ -242,12 +243,12 @@
 
         <footer>
             <div class="footer-content">
-                <p>&copy; 2025 theabhitbangar. All Rights Reserved.</p>
+                <p>&copy; 2025 AbhitBangar. All Rights Reserved.</p>
                 <div class="social-links">
                     <a href="mailto:abhitbangar333@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="tel:+918830088515"><i class="fas fa-phone"></i></a>
                     <a href="https://github.com/AbhitBangar" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://linkedin.com/in/AbhitBangar" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/theabhitbangar/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
         </footer>
@@ -255,4 +256,4 @@
 
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
