--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a href="mailto:abhitbangar333@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
                     <a href="tel:+918830088515" title="Phone"><i class="fas fa-phone"></i></a>
                     <a href="https://github.com/AbhitBangar" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/theabhitbangar" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/AbhitBangar" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
         </section>
@@ -248,7 +248,7 @@
                     <a href="mailto:abhitbangar333@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="tel:+918830088515"><i class="fas fa-phone"></i></a>
                     <a href="https://github.com/AbhitBangar" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/theabhitbangar/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/AbhitBangar" target="_blank"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
         </footer>
