--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,28 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="project-card">
+                        <div class="project-content">
+                            <h3>Sign Language Detection using Machine Learning</h3>
+                            <p class="tech-stack">Python, Machine Learning, TensorFlow, OpenCV, Deep Learning</p>
+                            <ul class="project-details">
+                                <li>Developed a system for real-time sign language recognition using machine learning algorithms and video analysis.</li>
+                                <li>Enabled seamless translation between sign language and text/speech, bridging communication between sign language users and non-users.</li>
+                                <li>Aimed to close communication gaps and improve sign language accessibility across diverse contexts using advanced ML techniques.</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="project-content">
+                            <h3>Attendance Management System using Web Development</h3>
+                            <p class="tech-stack">HTML, CSS, JavaScript, PHP, MySQL, Web Development</p>
+                            <ul class="project-details">
+                                <li>Designed and implemented a digital attendance management system to streamline tracking for organizations, especially educational institutions.</li>
+                                <li>Automated the process of recording student attendance based on their presence in class, maintained on a daily basis.</li>
+                                <li>Aimed to enhance organizational efficiency and performance by digitizing attendance management processes.</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
