--- a/research.html
+++ b/research.html
@@ -35,7 +35,7 @@
                 <div class="achievements-grid">
                     <div class="achievement-card">
                         <i class="fas fa-book"></i>
-                        <h3>"The Legacy of Vedic Engineering for Modern Applications"</h3>
+                        <h3>"The Legacy of Vedic Engineering for Modern Applications" <a href="https://www.flipkart.com/legacy-vedic-engineering-modern-applications/p/itmf91ab76279450?pid=9788197478000&lid=LSTBOK9788197478000Y1JJ1D&marketplace=FLIPKART" target="_blank" title="View Book on Flipkart"><i class="fas fa-link"></i></a></h3>
                         <ul>
                             <li>Authored a book on <strong>Vedic engineering principles</strong> and their applications in modern technology, highlighting the integration of ancient techniques with contemporary advancements.</li>
                             <li>This book explores the intersection of ancient Indian engineering wisdom and its relevance to solving modern technological challenges.</li>
