--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <div class="wrapper">
         <header>
             <div class="logo">AB</div>
+            <button id="theme-toggle" aria-label="Toggle dark mode" style="background:none;border:none;cursor:pointer;font-size:2rem;margin-right:10px;">
+                <i class="fas fa-moon"></i>
+            </button>
             <nav>
                 <button class="nav-toggle">
                     <span></span>
