--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <span></span>
                 </button>
                 <ul class="nav-menu">
+                    <button class="nav-close">
+                        <i class="fas fa-times"></i>
+                    </button>
                     <li><a href="#about">About</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="projects.html">Projects</a></li>
@@ -84,6 +87,7 @@
                     </div>
                 </div>
                 <div class="skill-category">
+                    <br>
                     <h3>Programming Profile Links</h3>
                     <div class="skill-tags">
                         <a href="https://github.com/AbhitBangar" class="btn-secondary" target="_blank"><i class="fab fa-github"></i> GitHub</a>
