--- a/achievements.html
+++ b/achievements.html
@@ -23,6 +23,9 @@
                     <span></span>
                 </button>
                 <ul class="nav-menu">
+                    <button class="nav-close">
+                        <i class="fas fa-times"></i>
+                    </button>
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="index.html#skills">Skills</a></li>
                     <li><a href="projects.html">Projects</a></li>
