--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <div class="wrapper">
         <header>
             <div class="logo">AB</div>
-            <button id="theme-toggle" aria-label="Toggle dark mode" style="background:none;border:none;cursor:pointer;font-size:2rem;margin-right:10px;">
+            <div class="theme-toggle-container" id="theme-toggle" role="button" aria-label="Toggle dark mode">
                 <i class="fas fa-moon"></i>
-            </button>
+                <span class="theme-text">Dark Mode</span>
+            </div>
             <nav>
                 <button class="nav-toggle">
                     <span></span>
