--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                         <div class="skill-tags">
                             <span>Spring Boot</span>
                             <span>DBMS (MySQL)</span>
+                            <span>Bootstrap</span>
                         </div>
                     </div>
                     <div class="skill-category">
