--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="comic-bubble">
                     <h1>Abhit Anant Bangar</h1>
-                    <p>Computer Engineer, Developer & Research Writer</p>
+                    <p>Computer Engineer | Developer | Research Writer</p>
                 </div>
                 <div class="social-links">
                     <a href="mailto:abhitbangar333@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
