--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
         <footer>
             <div class="footer-content">
-                <p>&copy; 2025 AbhitBangar. All Rights Reserved.</p>
+                <p>&copy; AbhitBangar. All Rights Reserved.</p>
                 <div class="social-links">
                     <a href="mailto:abhitbangar333@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="tel:+918830088515"><i class="fas fa-phone"></i></a>
