--- a/achievements.html
+++ b/achievements.html
@@ -65,7 +65,7 @@
         </section>
         <footer>
             <div class="footer-content">
-                <p>&copy; 2025 AbhitBangar. All Rights Reserved.</p>
+                <p>&copy; abhitbangar. All Rights Reserved.</p>
                 <div class="social-links">
                     <a href="mailto:abhitbangar333@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="tel:+918830088515"><i class="fas fa-phone"></i></a>
