--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,7 @@
         </section>
         <footer>
             <div class="footer-content">
-                <p>&copy; abhitbangar. All Rights Reserved.</p>
+                <p>&copy; Abhit Anant Bangar. All Rights Reserved.</p>
                 <div class="social-links">
                     <a href="mailto:abhitbangar333@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="tel:+918830088515"><i class="fas fa-phone"></i></a>
