--- a/achievements.html
+++ b/achievements.html
@@ -39,33 +39,38 @@
         <section id="achievements" class="comic-panel">
             <div class="panel-content">
                 <h2 class="section-title">Achievements</h2>
-                <div class="achievements">
-                    <h3>Coding Achievements</h3>
-                    <ul>
-                        <li>Solved more than <strong>200 problems</strong> on various coding platforms.</li>
-                        <li><strong>1st rank</strong> in intra-college Logic Hunt Competition at Techfest-2023.</li>
-                    </ul>
-                </div>
-                <div class="responsibilities">
-                    <h3>Position of Responsibilities</h3>
-                    <ul>
-                        <li><strong>President</strong> of IEEE Students Committee, ARMIET (2022-2025)</li>
-                        <li><strong>Head Boy</strong> of Research and Development Students Department, ARMIET (2023-2025)</li>
-                        <li><strong>Leader</strong> of NSS Unit, ARMIET (2023-2024)</li>
-                    </ul>
-                </div>
-                <div class="certificates">
-                    <h3>Certificates</h3>
-                    <ul>
-                        <li><strong>Java Full Stack</strong> - Qspiders, 2025</li>
-                        <li><strong>Full Stack Web Development</strong> - Apna College, 2024</li>
-                    </ul>
+                <div class="achievements-grid">
+                    <div class="achievement-card">
+                        <i class="fas fa-code"></i>
+                        <h3>Coding Achievements</h3>
+                        <ul>
+                            <li>Solved more than <strong>200 problems</strong> on various coding platforms.</li>
+                            <li><strong>1st rank</strong> in intra-college Logic Hunt Competition at Techfest-2023.</li>
+                        </ul>
+                    </div>
+                    <div class="achievement-card">
+                        <i class="fas fa-user-tie"></i>
+                        <h3>Position of Responsibilities</h3>
+                        <ul>
+                            <li><strong>President</strong> of IEEE Students Committee, ARMIET (2022-2025)</li>
+                            <li><strong>Head Boy</strong> of Research and Development Students Department, ARMIET (2023-2025)</li>
+                            <li><strong>Leader</strong> of NSS Unit, ARMIET (2023-2024)</li>
+                        </ul>
+                    </div>
+                    <div class="achievement-card">
+                        <i class="fas fa-certificate"></i>
+                        <h3>Certificates</h3>
+                        <ul>
+                            <li><strong>Java Full Stack</strong> - Qspiders, 2025</li>
+                            <li><strong>Full Stack Web Development</strong> - Apna College, 2024</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
         <footer>
             <div class="footer-content">
-                <p>&copy; Abhit Anant Bangar. All Rights Reserved.</p>
+                <p>&copy; 2025 Abhit Anant Bangar. All Rights Reserved.</p>
                 <div class="social-links">
                     <a href="mailto:abhitbangar333@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="tel:+918830088515"><i class="fas fa-phone"></i></a>
