--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,7 @@
                                 <li>Merged, resized, normalized, data augmented, and prepared two datasets found on Kaggle containing brain MRI images (over 5000 images) to improve generalization performance.</li>
                                 <li>Deep CNN was used to extract spatial features while Bi-LSTM captured temporal features. The attention layer improved relevant feature focus, thus enhancing classification accuracy.</li>
                             </ul>
+                            <a href="#" target="_blank" class="btn-secondary">View Project</a>
                         </div>
                     </div>
                     <div class="project-card">
@@ -57,9 +58,10 @@
                             <p class="tech-stack">HTML5, CSS, Bootstrap, JavaScript</p>
                             <ul class="project-details">
                                 <li>Created a tailored interactive medical quiz platform for a medical college professor using HTML, CSS, and JavaScript.</li>
-                                <li>Created a three-level immersion quiz system: Level 1 includes Multiple Choice Questions, Level 2 is a gamified Spin the Wheel, and Video-Based Question and Answering is in Level 3.</li>
+                                <li>Created a three-level immersion quiz system: Level 1 includes Multiple Choice Questions, Level 2 is a gamified Spin the Wheel, and Video-Based Question and Answering is Level 3.</li>
                                 <li>Developed step-by-step strategies to allow effortless movement and accessibility in every device and platform.</li>
                             </ul>
+                            <a href="#" target="_blank" class="btn-secondary">View Project</a>
                         </div>
                     </div>
                     <div class="project-card">
@@ -71,6 +73,7 @@
                                 <li>Enabled seamless translation between sign language and text/speech, bridging communication between sign language users and non-users.</li>
                                 <li>Aimed to close communication gaps and improve sign language accessibility across diverse contexts using advanced ML techniques.</li>
                             </ul>
+                            <a href="#" target="_blank" class="btn-secondary">View Project</a>
                         </div>
                     </div>
                     <div class="project-card">
@@ -82,6 +85,7 @@
                                 <li>Automated the process of recording student attendance based on their presence in class, maintained on a daily basis.</li>
                                 <li>Aimed to enhance organizational efficiency and performance by digitizing attendance management processes.</li>
                             </ul>
+                            <a href="#" target="_blank" class="btn-secondary">View Project</a>
                         </div>
                     </div>
                 </div>
@@ -89,7 +93,7 @@
         </section>
         <footer>
             <div class="footer-content">
-                <p>&copy; Abhit Anant Bangar. All Rights Reserved.</p>
+                <p>&copy; 2025 Abhit Anant Bangar. All Rights Reserved.</p>
                 <div class="social-links">
                     <a href="mailto:abhitbangar333@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="tel:+918830088515"><i class="fas fa-phone"></i></a>
