--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@
                 <div class="achievements-grid">
                     <div class="achievement-card">
                         <i class="fas fa-book"></i>
-                        <h3>"The Legacy of Vedic Engineering for Modern Applications" <a href="https://www.google.co.in/books/edition/_/w6QbEQAAQBAJ?hl=en&gbpv=0#pli=1" target="_blank" title="View Book on Flipkart"><i class="fas fa-link"></i></a></h3>
+                        <h3>"The Legacy of Vedic Engineering for Modern Applications" <a href="https://www.google.co.in/books/edition/_/w6QbEQAAQBAJ?hl=en&gbpv=0#pli=1" target="_blank" title="View Book on Flipkart" class="btn-secondary">View Book</a></h3>
                         <ul>
                             <li>Authored a book on <strong>Vedic engineering principles</strong> and their applications in modern technology, highlighting the integration of ancient techniques with contemporary advancements.</li>
                             <li>This book explores the intersection of ancient Indian engineering wisdom and its relevance to solving modern technological challenges.</li>
@@ -52,17 +52,32 @@
                         <i class="fas fa-file-signature"></i>
                         <h3>Published Research Papers</h3>
                         <ul>
-                            <li>"To implement and enhance EEG disease classification with Attention Mechanism using Deep CNN-BILSTM' - 2025.</li>
-                            <li>"Bridging the Past and Present: Ancient Indian Engineering and Its Influence on Modern Practices" - 2024.</li>
-                            <li>"Arrhythmia Detection in Patient ECGs Using Deep Convolutional Neural Networks with IoT-Enabled" - 2023.</li>
+                            <li>
+                                "To implement and enhance EEG disease classification with Attention Mechanism using Deep CNN-BILSTM' - 2025.
+                                <br><a href="#" target="_blank" class="btn-secondary">View Paper</a>
+                            </li>
+                            <li>
+                                "Bridging the Past and Present: Ancient Indian Engineering and Its Influence on Modern Practices" - 2024.
+                                <br><a href="#" target="_blank" class="btn-secondary">View Paper</a>
+                            </li>
+                            <li>
+                                "Arrhythmia Detection in Patient ECGs Using Deep Convolutional Neural Networks with IoT-Enabled" - 2023.
+                                <br><a href="#" target="_blank" class="btn-secondary">View Paper</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="achievement-card">
                         <i class="fas fa-file-alt"></i>
                         <h3>Conferences and Paper Presentations</h3>
                         <ul>
-                            <li>Presented research paper titled <strong>Bridging the Past and Present: Ancient Indian Engineering and Its Influence on Modern Practices</strong> at <strong>ICFTEST 2024</strong>, hosted by Nagpur Institute of Technology, Nagpur <strong>(NIT)</strong>.</li>
-                            <li>Presented research paper titled <strong>Arrhythmia Detection in Patient ECGs Using Deep Convolutional Neural Networks with IoT-Enabled</strong> at the 12th International Conference on Communication, Computing, and Sensor Networks, <strong>(CCSN) 2023</strong>.</li>
+                            <li>
+                                Presented research paper titled <strong>Bridging the Past and Present: Ancient Indian Engineering and Its Influence on Modern Practices</strong> at <strong>ICFTEST 2024</strong>, hosted by Nagpur Institute of Technology, Nagpur <strong>(NIT)</strong>.
+                                <br><a href="#" target="_blank" class="btn-secondary">View Website</a>
+                            </li>
+                            <li>
+                                Presented research paper titled <strong>Arrhythmia Detection in Patient ECGs Using Deep Convolutional Neural Networks with IoT-Enabled</strong> at the 12th International Conference on Communication, Computing, and Sensor Networks, <strong>(CCSN) 2023</strong>.
+                                <br><a href="#" target="_blank" class="btn-secondary">View Website</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -70,7 +85,7 @@
         </section>
         <footer>
             <div class="footer-content">
-                <p>&copy; Abhit Anant Bangar. All Rights Reserved.</p>
+                <p>&copy; 2025 Abhit Anant Bangar. All Rights Reserved.</p>
                 <div class="social-links">
                     <a href="mailto:abhitbangar333@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="tel:+918830088515"><i class="fas fa-phone"></i></a>
