DarkMode button animation, removed view button underline

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                                 <li>Created a three-level immersion quiz system: Level 1 includes Multiple Choice Questions, Level 2 is a gamified Spin the Wheel, and Video-Based Question and Answering is Level 3.</li>
                                 <li>Developed step-by-step strategies to allow effortless movement and accessibility in every device and platform.</li>
                             </ul>
-                            <a href="#" target="_blank" class="btn-secondary">View Project</a>
+                            <a href="https://abhitbangar.github.io/MedQuiz-Hub" target="_blank" class="btn-secondary">View Project</a>
                         </div>
                     </div>
                     <div class="project-card">
