--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 <body>
     <div class="wrapper">
         <header>
+            <div class="header-left">
             <div class="logo">AB</div>
             <div class="theme-toggle-container" id="theme-toggle" role="button" aria-label="Toggle dark mode">
                 <i class="fas fa-moon"></i>
                 <span class="theme-text">Dark Mode</span>
+                </div>
             </div>
             <nav>
                 <button class="nav-toggle">
@@ -63,8 +65,8 @@
                 <h2 class="section-title">About Me</h2>
                 <div class="about-grid">
                     <div class="about-text">
-                        <p>Computer Engineer with a passion for innovative technologies and problem-solving.</p>
-                        <a href="#contact" class="btn-secondary">Get in Touch</a>
+                        <p>As a computer engineering graduate from the University of Mumbai, I am passionate about technology and its applications. My academic background has equipped me with a good foundation in programming languages, software development, web development, and computer hardware.</p>
+                        <a href="#contact" class="btn-secondary">Download Resume</a>
                     </div>
                     <div class="education-card">
                         <h3>Education</h3>
@@ -196,6 +198,7 @@
             </div>
         </section>
 
+        </div> <!-- end of .wrapper -->
         <footer>
             <div class="footer-content">
                 <p>&copy; 2025 Abhit Anant Bangar. All Rights Reserved.</p>
@@ -206,8 +209,6 @@
                 </div>
             </div>
         </footer>
-    </div>
-
     <script src="script.js"></script>
 </body>
 </html>
