--- a/projects.html
+++ b/projects.html
@@ -12,10 +12,12 @@
 <body>
     <div class="wrapper">
         <header>
+            <div class="header-left">
             <div class="logo">AB</div>
             <div class="theme-toggle-container" id="theme-toggle" role="button" aria-label="Toggle dark mode">
                 <i class="fas fa-moon"></i>
                 <span class="theme-text">Dark Mode</span>
+                </div>
             </div>
             <nav>
                 <button class="nav-toggle">
@@ -29,7 +31,7 @@
                     </button>
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="index.html#skills">Skills</a></li>
-                    <li><a href="projects.html" class="active">Projects</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="research.html">Research Work</a></li>
                     <li><a href="achievements.html">Achievements</a></li>
                     <li><a href="index.html#contact" class="btn-primary">Contact Me</a></li>
