--- a/achievements.html
+++ b/achievements.html
@@ -12,10 +12,12 @@
 <body>
     <div class="wrapper">
         <header>
-            <div class="logo">AB</div>
-            <div class="theme-toggle-container" id="theme-toggle" role="button" aria-label="Toggle dark mode">
-                <i class="fas fa-moon"></i>
-                <span class="theme-text">Dark Mode</span>
+            <div class="header-left">
+                <div class="logo">AB</div>
+                <div class="theme-toggle-container" id="theme-toggle" role="button" aria-label="Toggle dark mode">
+                    <i class="fas fa-moon"></i>
+                    <span class="theme-text">Dark Mode</span>
+                </div>
             </div>
             <nav>
                 <button class="nav-toggle">
@@ -31,7 +33,7 @@
                     <li><a href="index.html#skills">Skills</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="research.html">Research Work</a></li>
-                    <li><a href="achievements.html" class="active">Achievements</a></li>
+                    <li><a href="achievements.html">Achievements</a></li>
                     <li><a href="index.html#contact" class="btn-primary">Contact Me</a></li>
                 </ul>
             </nav>
