--- a/index.html
+++ b/index.html
@@ -53,9 +53,18 @@
                     <p>Computer Engineer | Full-Stack Developer | Research Writer</p>
                 </div>
                 <div class="social-links">
-                    <a href="mailto:abhitbangar333@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
-                    <a href="tel:+918830088515" title="Phone"><i class="fas fa-phone"></i></a>
-                    <a href="https://www.linkedin.com/in/AbhitBangar" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:abhitbangar333@gmail.com" title="Email">
+                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><rect x="2" y="4" width="20" height="16" rx="2"/><path d="M22 6 12 13 2 6"/></svg>
+                    </a>
+                    <a href="tel:+918830088515" title="Phone">
+                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.72 19.72 0 0 1 2 4.18 2 2 0 0 1 4 2h3a2 2 0 0 1 2 1.72c.13 1.05.37 2.07.72 3.06a2 2 0 0 1-.45 2.11l-1.27 1.27a16 16 0 0 0 6.29 6.29l1.27-1.27a2 2 0 0 1 2.11-.45c.99.35 2.01.59 3.06.72A2 2 0 0 1 22 16.92z"/></svg>
+                    </a>
+                    <a href="https://www.linkedin.com/in/AbhitBangar" target="_blank" title="LinkedIn">
+                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true">
+                            <rect x="2" y="2" width="20" height="20" rx="2"/>
+                            <path d="M8 11v5M8 8v.01M12 16v-5M12 16v-3a2 2 0 1 1 4 0v3"/>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </section>
@@ -203,9 +212,18 @@
             <div class="footer-content">
                 <p>&copy; 2025 Abhit Anant Bangar. All Rights Reserved.</p>
                 <div class="social-links">
-                    <a href="mailto:abhitbangar333@gmail.com"><i class="fas fa-envelope"></i></a>
-                    <a href="tel:+918830088515"><i class="fas fa-phone"></i></a>
-                    <a href="https://www.linkedin.com/in/AbhitBangar" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:abhitbangar333@gmail.com">
+                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><rect x="2" y="4" width="20" height="16" rx="2"/><path d="M22 6 12 13 2 6"/></svg>
+                    </a>
+                    <a href="tel:+918830088515">
+                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.72 19.72 0 0 1 2 4.18 2 2 0 0 1 4 2h3a2 2 0 0 1 2 1.72c.13 1.05.37 2.07.72 3.06a2 2 0 0 1-.45 2.11l-1.27 1.27a16 16 0 0 0 6.29 6.29l1.27-1.27a2 2 0 0 1 2.11-.45c.99.35 2.01.59 3.06.72A2 2 0 0 1 22 16.92z"/></svg>
+                    </a>
+                    <a href="https://www.linkedin.com/in/AbhitBangar" target="_blank">
+                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true">
+                          <rect x="2" y="2" width="20" height="20" rx="2"/>
+                          <path d="M8 11v5M8 8v.01M12 16v-5M12 16v-3a2 2 0 1 1 4 0v3"/>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </footer>
