--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="about-grid">
                     <div class="about-text">
                         <p>As a computer engineering graduate from the University of Mumbai, I am passionate about technology and its applications. My academic background has equipped me with a good foundation in programming languages, software development, web development, and computer hardware.</p>
-                        <a href="#contact" class="btn-secondary">Download Resume</a>
+                        <a href="https://drive.google.com/file/d/1DXhnYkpEArIGuoHdG1ZGG4w5HkKiEY1e/view?usp=sharing" class="btn-secondary">Download Resume</a>
                     </div>
                     <div class="education-card">
                         <h3>Education</h3>
