background and reactive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#6C5CE7">
     <link rel="icon" type="image/jpeg" href="images/abhit.jpeg">
 </head>
-<body>
+<body class="home">
     <div class="wrapper">
         <header>
             <div class="header-left">
