--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
                 </div>
                 <div class="comic-bubble">
                     <h1>Abhit Anant Bangar</h1>
-                    <p>Java Developer | Research Writer</p>
+                    <p class="hero-location">
+                        <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 21c-4.418 0-8-5.373-8-10a8 8 0 1 1 16 0c0 4.627-3.582 10-8 10z" stroke="currentColor"/><path d="M12 11.5c.828 0 1.5-.672 1.5-1.5S12.828 8.5 12 8.5s-1.5.672-1.5 1.5.672 1.5 1.5 1.5z" stroke="currentColor"/><path d="M12 13.5c1.5 0 3-1.5 3-3s-1.5-3-3-3-3 1.5-3 3 1.5 3 3 3z" stroke="var(--accent-color)"/></svg>
+                        Mumbai, India
+                    </p>
+                    <p class="job-role"><span class="java-dev">Java Developer |</span> <span class="pipe-research">Research Writer</span></p>
                 </div>
                 <div class="social-links">
                     <a href="https://github.com/AbhitBangar" title="GitHub" target="_blank">
@@ -88,7 +92,7 @@
                             <li>
                                 <span class="year">2021 - 2025</span>
                                 <span class="degree">ARMIET, University of Mumbai</span>
-                                <span class="detail">Computer Engineering | CGPA: 7.6</span>
+                                <span class="detail">Computer Engineering | CGPA: 7.9</span>
                             </li>
                             <li>
                                 <span class="year">2020 - 2021</span>
@@ -164,11 +168,15 @@
                 <div class="contact-grid">
                     <div class="contact-info">
                         <div class="contact-item">
-                            <i class="fas fa-envelope"></i>
+                            <a href="mailto:abhitbangar333@gmail.com" title="Email">
+                                <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><rect x="2" y="4" width="20" height="16" rx="2"/><path d="M22 6 12 13 2 6"/></svg>
+                            </a>
                             <p>abhitbangar333@gmail.com</p>
                         </div>
                         <div class="contact-item">
-                            <i class="fab fa-linkedin"></i>
+                            <a href="https://www.linkedin.com/in/AbhitBangar" title="LinkedIn" target="_blank" rel="noopener">
+                                <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="2"/><line x1="8" y1="11" x2="8" y2="16"/><line x1="8" y1="8" x2="8" y2="8"/><line x1="12" y1="16" x2="12" y2="13"/><path d="M16 16v-3a2 2 0 0 0-4 0"/></svg>
+                            </a>
                             <p>linkedin.com/in/AbhitBangar</p>
                         </div>
                     </div>
@@ -208,30 +216,7 @@
         </section>
 
         </div> <!-- end of .wrapper -->
-        <footer>
-            <div class="footer-content">
-                <p>&copy; 2025 Abhit Anant Bangar. All Rights Reserved.</p>
-                <div class="social-links">
-                    <a href="https://github.com/AbhitBangar" title="GitHub" target="_blank">
-                        <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C6.477 2 2 6.484 2 12.021c0 4.428 2.865 8.184 6.839 9.504.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.342-3.369-1.342-.454-1.154-1.11-1.462-1.11-1.462-.908-.62.069-.608.069-.608 1.004.07 1.532 1.032 1.532 1.032.892 1.53 2.341 1.088 2.91.832.091-.647.35-1.088.636-1.339-2.221-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.987 1.029-2.686-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.025A9.564 9.564 0 0 1 12 6.844c.85.004 1.705.115 2.504.337 1.909-1.295 2.748-1.025 2.748-1.025.546 1.378.203 2.397.1 2.65.64.699 1.028 1.593 1.028 2.686 0 3.847-2.337 4.695-4.566 4.944.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.749 0 .267.18.579.688.481C19.138 20.203 22 16.447 22 12.021 22 6.484 17.523 2 12 2Z"/></svg>
-                    </a>
-                    <a href="mailto:abhitbangar333@gmail.com" title="Email">
-                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><rect x="2" y="4" width="20" height="16" rx="2"/><path d="M22 6 12 13 2 6"/></svg>
-                    </a>
-                    <a href="https://www.linkedin.com/in/AbhitBangar" title="LinkedIn" target="_blank">
-                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="2"/><line x1="8" y1="11" x2="8" y2="16"/><line x1="8" y1="8" x2="8" y2="8"/><line x1="12" y1="16" x2="12" y2="13"/><path d="M16 16v-3a2 2 0 0 0-4 0"/></svg>
-                    </a>
-                    <a href="https://instagram.com/abhitbangar" title="Instagram" target="_blank">
-                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.5" y2="6.5"/></svg>
-                    </a>
-                    <a href="https://twitter.com/abhitbangar" title="Twitter" target="_blank">
-                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true">
-                            <path d="M6 4h4.5l3.5 5 4-5H22l-6.5 8.5L22 20h-4.5l-3.5-5-4 5H2l6.5-8.5L2 4h4z"/>
-                        </svg>
-                    </a>
-                </div>
-            </div>
-        </footer>
     <script src="script.js"></script>
+    <footer><p>&copy; 2025 Abhit Anant Bangar. All Rights Reserved.</p></footer>
 </body>
 </html>
