nav bar in index.html updates, view pdfs added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 21c-4.418 0-8-5.373-8-10a8 8 0 1 1 16 0c0 4.627-3.582 10-8 10z" stroke="currentColor"/><path d="M12 11.5c.828 0 1.5-.672 1.5-1.5S12.828 8.5 12 8.5s-1.5.672-1.5 1.5.672 1.5 1.5 1.5z" stroke="currentColor"/><path d="M12 13.5c1.5 0 3-1.5 3-3s-1.5-3-3-3-3 1.5-3 3 1.5 3 3 3z" stroke="var(--accent-color)"/></svg>
                         Mumbai, India
                     </p>
-                    <p class="job-role"><span class="java-dev">Java Developer |</span> <span class="pipe-research">Research Writer</span></p>
+                    <p class="job-role"><span class="java-dev">Full Stack Developer |</span> <span class="pipe-research">Research Writer</span></p>
                 </div>
                 <div class="social-links">
                     <a href="https://github.com/AbhitBangar" title="GitHub" target="_blank">
