--- a/research.html
+++ b/research.html
@@ -53,16 +53,16 @@
                         <h3>Published Research Papers</h3>
                         <ul>
                             <li>
-                                "To implement and enhance EEG disease classification with Attention Mechanism using Deep CNN-BILSTM' - 2025.
-                                <br><a href="#" target="_blank" class="btn-secondary">View Paper</a>
+                                "To implement and enhance EEG disease classification with Attention Mechanism using Deep CNN-BILSTM" - 2025.
+                                <br><a href="https://drive.google.com/file/d/19CzDziWPRv5rEE5UDdQnVvFeTP6xGtWO/view?usp=drive_link" target="_blank" class="btn-secondary">View Resource</a>
                             </li>
                             <li>
                                 "Bridging the Past and Present: Ancient Indian Engineering and Its Influence on Modern Practices" - 2024.
-                                <br><a href="#" target="_blank" class="btn-secondary">View Paper</a>
+                                <br><a href="https://drive.google.com/file/d/1jPWfQ2ElSkvnR8H4Q3SwnP273yxNqRFJ/view?usp=sharing" target="_blank" class="btn-secondary">View Resource</a>
                             </li>
                             <li>
                                 "Arrhythmia Detection in Patient ECGs Using Deep Convolutional Neural Networks with IoT-Enabled" - 2023.
-                                <br><a href="#" target="_blank" class="btn-secondary">View Paper</a>
+                                <br><a href="https://drive.google.com/file/d/1Af5bHcZ2qI87mDZPCNa2coqldjxTXDS8/view?usp=sharing" target="_blank" class="btn-secondary">View Resource</a>
                             </li>
                         </ul>
                     </div>
@@ -72,11 +72,11 @@
                         <ul>
                             <li>
                                 Presented research paper titled <strong>Bridging the Past and Present: Ancient Indian Engineering and Its Influence on Modern Practices</strong> at <strong>ICFTEST 2024</strong>, hosted by Nagpur Institute of Technology, Nagpur <strong>(NIT)</strong>.
-                                <br><a href="#" target="_blank" class="btn-secondary">View Website</a>
+                                <br><a href="https://drive.google.com/file/d/1_qPUcWwlGf6fhNfSOIY8kOJD4ra1xoSZ/view?usp=sharing" target="_blank" class="btn-secondary">View Certificate</a>
                             </li>
                             <li>
                                 Presented research paper titled <strong>Arrhythmia Detection in Patient ECGs Using Deep Convolutional Neural Networks with IoT-Enabled</strong> at the 12th International Conference on Communication, Computing, and Sensor Networks, <strong>(CCSN) 2023</strong>.
-                                <br><a href="#" target="_blank" class="btn-secondary">View Website</a>
+                                <br><a href="https://drive.google.com/file/d/1qICBmDNA0C4N6EeJlcGahS8WsGg9eKRJ/view?usp=sharing" target="_blank" class="btn-secondary">View Certificate</a>
                             </li>
                         </ul>
                     </div>
