profile photo updated

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section class="hero">
             <div class="hero-content">
                 <div class="profile-photo">
-                    <img src="images/abhit.jpeg" alt="Abhit Anant Bangar">
+                    <img src="images/web.jpg" alt="Abhit Anant Bangar">
                 </div>
                 <div class="comic-bubble">
                     <h1>Abhit Anant Bangar</h1>
