AB logo removed, nav bar update

--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
     <div class="wrapper">
         <header>
             <div class="header-left">
-            <div class="logo">AB</div>
             <div class="theme-toggle-container" id="theme-toggle" role="button" aria-label="Toggle dark mode">
                 <i class="fas fa-moon"></i>
                 <span class="theme-text">Dark Mode</span>
                 </div>
             </div>
             <nav>
-                <button class="nav-toggle">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                <button class="nav-toggle" aria-label="Open menu">
+                    <svg class="chevron-icon" width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <polyline points="6,11 14,19 22,11" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
                 </button>
                 <ul class="nav-menu">
                     <li><a href="#about">About</a></li>
