dark mode icon color updated

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#6C5CE7">
-    <link rel="icon" type="image/jpeg" href="images/abhit.jpeg">
+    <link rel="icon" type="image/jpeg" href="assets/abhit.jpeg">
 </head>
 <body class="home">
     <div class="wrapper">
@@ -43,7 +43,7 @@
         <section class="hero">
             <div class="hero-content">
                 <div class="profile-photo">
-                    <img src="images/abhit.jpeg" alt="Abhit Anant Bangar">
+                    <img src="assets/abhit.jpeg" alt="Abhit Anant Bangar">
                 </div>
                 <div class="comic-bubble">
                     <h1>Abhit Anant Bangar</h1>
