--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                     <a href="https://www.linkedin.com/in/AbhitBangar" title="LinkedIn" target="_blank">
                         <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="2"/><line x1="8" y1="11" x2="8" y2="16"/><line x1="8" y1="8" x2="8" y2="8"/><line x1="12" y1="16" x2="12" y2="13"/><path d="M16 16v-3a2 2 0 0 0-4 0"/></svg>
                     </a>
-                    <a href="https://instagram.com/abhitbangar" title="Instagram" target="_blank">
-                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.5" y2="6.5"/></svg>
-                    </a>
                     <a href="https://twitter.com/abhitbangar" title="Twitter" target="_blank">
                         <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true">
                             <path d="M6 4h4.5l3.5 5 4-5H22l-6.5 8.5L22 20h-4.5l-3.5-5-4 5H2l6.5-8.5L2 4h4z"/>
                         </svg>
+                    </a>
+                    <a href="https://instagram.com/abhitbangar" title="Instagram" target="_blank">
+                        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.5" y2="6.5"/></svg>
                     </a>
                 </div>
                 <br>
@@ -177,6 +177,14 @@
                                 <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true"><rect x="2" y="2" width="20" height="20" rx="2"/><line x1="8" y1="11" x2="8" y2="16"/><line x1="8" y1="8" x2="8" y2="8"/><line x1="12" y1="16" x2="12" y2="13"/><path d="M16 16v-3a2 2 0 0 0-4 0"/></svg>
                             </a>
                             <p>linkedin.com/in/AbhitBangar</p>
+                        </div>
+                        <div class="contact-item">
+                            <a href="https://twitter.com/abhitbangar" title="Twitter" target="_blank" rel="noopener">
+                                <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" aria-hidden="true">
+                                    <path d="M6 4h4.5l3.5 5 4-5H22l-6.5 8.5L22 20h-4.5l-3.5-5-4 5H2l6.5-8.5L2 4h4z"/>
+                                </svg>
+                            </a>
+                            <p>x.com/abhitbangar</p>
                         </div>
                     </div>
                     <div class="contact-form">
