--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
                                 <li>Merged, resized, normalized, data augmented, and prepared two datasets found on Kaggle containing brain MRI images (over 5000 images) to improve generalization performance.</li>
                                 <li>Deep CNN was used to extract spatial features while Bi-LSTM captured temporal features. The attention layer improved relevant feature focus, thus enhancing classification accuracy.</li>
                             </ul>
-                            <a href="#" target="_blank" class="btn-secondary">View Project</a>
+                            <a href="https://github.com/AbhitBangar/EEG-Disease-Classification" target="_blank" class="btn-secondary">View Project</a>
                         </div>
                     </div>
                     <div class="project-card">
@@ -60,7 +60,7 @@
                                 <li>Created a three-level immersion quiz system: Level 1 includes Multiple Choice Questions, Level 2 is a gamified Spin the Wheel, and Video-Based Question and Answering is Level 3.</li>
                                 <li>Developed step-by-step strategies to allow effortless movement and accessibility in every device and platform.</li>
                             </ul>
-                            <a href="https://abhitbangar.github.io/MedQuiz-Hub" target="_blank" class="btn-secondary">View Project</a>
+                            <a href="https://github.com/AbhitBangar/MedQuiz-Hub" target="_blank" class="btn-secondary">View Project</a>
                         </div>
                     </div>
                     <div class="project-card">
